--- a/docs/csharp/misc/cs0658.md
+++ b/docs/csharp/misc/cs0658.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 0309074c-741a-492c-9370-73b4bbfd3c1a
 ms.openlocfilehash: 98b83b313cb2912603da57414df8c41f538629d2
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33303791"
 ---
 # <a name="compiler-warning-level-1-cs0658"></a><span data-ttu-id="d928e-102">コンパイラの警告 (レベル 1) CS0658</span><span class="sxs-lookup"><span data-stu-id="d928e-102">Compiler Warning (level 1) CS0658</span></span>
 <span data-ttu-id="d928e-103">'attribute modifier' は認識できる属性の場所ではありません。</span><span class="sxs-lookup"><span data-stu-id="d928e-103">'attribute modifier' is not a recognized attribute location.</span></span> <span data-ttu-id="d928e-104">このブロック内の属性はすべて無視されます。</span><span class="sxs-lookup"><span data-stu-id="d928e-104">All attributes in this block will be ignored.</span></span>  
