--- a/docs/csharp/misc/cs0667.md
+++ b/docs/csharp/misc/cs0667.md
@@ -1,25 +1,19 @@
 ---
 title: コンパイラ エラー CS0667
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0667
 helpviewer_keywords:
 - CS0667
 ms.assetid: d7fd9a41-100f-47a1-8f59-d0832c1587fa
-caps.latest.revision: 8
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 191189d8b4e3a0cbc609e5c2b3bcae4d5cef410c
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
-ms.translationtype: MT
+ms.openlocfilehash: 8194b3ffd7b73b0113f42877aef812e4b456c1f1
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33301321"
 ---
-# <a name="compiler-error-cs0667"></a><span data-ttu-id="f67ad-102">コンパイラ エラー CS0667</span><span class="sxs-lookup"><span data-stu-id="f67ad-102">Compiler Error CS0667</span></span>
-<span data-ttu-id="f67ad-103">機能 'invalid feature' は推奨されません。</span><span class="sxs-lookup"><span data-stu-id="f67ad-103">The feature 'invalid feature' is deprecated.</span></span> <span data-ttu-id="f67ad-104">代わりに 'valid feature' を使用してください。</span><span class="sxs-lookup"><span data-stu-id="f67ad-104">Please use 'valid feature' instead'.</span></span>  
+# <a name="compiler-error-cs0667"></a><span data-ttu-id="49bb2-102">コンパイラ エラー CS0667</span><span class="sxs-lookup"><span data-stu-id="49bb2-102">Compiler Error CS0667</span></span>
+<span data-ttu-id="49bb2-103">機能 'invalid feature' は非推奨とされます。</span><span class="sxs-lookup"><span data-stu-id="49bb2-103">The feature 'invalid feature' is deprecated.</span></span> <span data-ttu-id="49bb2-104">代わりに 'valid feature' を使用してください。</span><span class="sxs-lookup"><span data-stu-id="49bb2-104">Please use 'valid feature' instead'.</span></span>  
   
- <span data-ttu-id="f67ad-105">使用しようとした機能は、現在使用されていません。</span><span class="sxs-lookup"><span data-stu-id="f67ad-105">The feature you are attempting to use is now deprecated.</span></span> <span data-ttu-id="f67ad-106">代わりに、正しい機能を使用するようにコードを更新します。</span><span class="sxs-lookup"><span data-stu-id="f67ad-106">Update your code to use the valid feature instead.</span></span>
+ <span data-ttu-id="49bb2-105">使用しようとした機能は、現在非推奨とされました。</span><span class="sxs-lookup"><span data-stu-id="49bb2-105">The feature you are attempting to use is now deprecated.</span></span> <span data-ttu-id="49bb2-106">代わりに、正しい機能を使用するようにコードを更新します。</span><span class="sxs-lookup"><span data-stu-id="49bb2-106">Update your code to use the valid feature instead.</span></span>
