--- a/docs/csharp/misc/cs1011.md
+++ b/docs/csharp/misc/cs1011.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS1011"
+title: コンパイラ エラー CS1011
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1011
 helpviewer_keywords:
 - CS1011
 ms.assetid: d4568471-b0f8-4c24-89f3-9c543521d1d8
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: a823610947b3e6a640a370a9f627cf4926c8de94
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 215f8c2a4bb360afa8a099397770adb16ea8dd11
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33303752"
 ---
-# <a name="compiler-error-cs1011"></a><span data-ttu-id="15028-102">コンパイラ エラー CS1011</span><span class="sxs-lookup"><span data-stu-id="15028-102">Compiler Error CS1011</span></span>
-<span data-ttu-id="15028-103">空の文字リテラルです。</span><span class="sxs-lookup"><span data-stu-id="15028-103">Empty character literal</span></span>  
+# <a name="compiler-error-cs1011"></a><span data-ttu-id="d73ee-102">コンパイラ エラー CS1011</span><span class="sxs-lookup"><span data-stu-id="d73ee-102">Compiler Error CS1011</span></span>
+<span data-ttu-id="d73ee-103">空の文字リテラルです。</span><span class="sxs-lookup"><span data-stu-id="d73ee-103">Empty character literal</span></span>  
   
- <span data-ttu-id="15028-104">[char](../../csharp/language-reference/keywords/char.md) が宣言され、null に初期化されました。</span><span class="sxs-lookup"><span data-stu-id="15028-104">A [char](../../csharp/language-reference/keywords/char.md) was declared and initialized to a null.</span></span> <span data-ttu-id="15028-105">`char` の初期化では、文字を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="15028-105">The initialization of a `char` must specify a character.</span></span>  
+ <span data-ttu-id="d73ee-104">[char](../../csharp/language-reference/keywords/char.md) が宣言され、null に初期化されました。</span><span class="sxs-lookup"><span data-stu-id="d73ee-104">A [char](../../csharp/language-reference/keywords/char.md) was declared and initialized to a null.</span></span> <span data-ttu-id="d73ee-105">`char` の初期化では、文字を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="d73ee-105">The initialization of a `char` must specify a character.</span></span>  
   
- <span data-ttu-id="15028-106">次の例では CS1011 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="15028-106">The following sample generates CS1011:</span></span>  
+ <span data-ttu-id="d73ee-106">次の例では CS1011 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="d73ee-106">The following sample generates CS1011:</span></span>  
   
 ```csharp  
 // CS1011.cs  
