--- a/docs/csharp/language-reference/compiler-messages/cs0173.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0173.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33211863"
 ---
 # <a name="compiler-error-cs0173"></a>コンパイラ エラー CS0173
 'class1' と 'class2' の間に暗黙的変換がないため、条件式の型を決定できません。  
