--- a/docs/csharp/misc/cs1570.md
+++ b/docs/csharp/misc/cs1570.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: a121d5c4-8b90-4cda-af5b-6ba8f23b2b1e
 ms.openlocfilehash: dcc51135c7b049a4ffa6464295310fbbe224766f
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33312485"
 ---
 # <a name="compiler-warning-level-1-cs1570"></a>コンパイラの警告 (レベル 1) CS1570
 'construct' の XML コメントの XML 形式が正しくありません - 'reason'  
