--- a/docs/csharp/misc/cs1718.md
+++ b/docs/csharp/misc/cs1718.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 7c1c11fd-4f91-482d-b8f7-efe2a361634e
 ms.openlocfilehash: 303aec0ae3d680b09f9c73aa67b9a5853379c1a9
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33313983"
 ---
 # <a name="compiler-warning-level-3-cs1718"></a>コンパイラの警告 (レベル 3) CS1718
 同じ変数と比較されました。他の変数と比較しますか?  
