--- a/docs/csharp/misc/cs0023.md
+++ b/docs/csharp/misc/cs0023.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 7a30073c-99de-41fa-ac6d-4a0dfbb76de9
 ms.openlocfilehash: c2e3e92ac82444a8bc71359e76be25222749ae89
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33267840"
 ---
 # <a name="compiler-error-cs0023"></a>コンパイラ エラー CS0023
 演算子 'operator' を 'type' 型のオペランドに適用することはできません  
