--- a/docs/csharp/misc/cs0076.md
+++ b/docs/csharp/misc/cs0076.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 8b3e8674-8bfb-4be5-a466-cdf6134e3935
 ms.openlocfilehash: dc8fee6980b51cdbb956258e8318aa868412e5d3
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33272342"
 ---
 # <a name="compiler-error-cs0076"></a>コンパイラ エラー CS0076
 列挙子名 'value__' は予約されているため、使用できません  
