--- a/docs/csharp/misc/cs0100.md
+++ b/docs/csharp/misc/cs0100.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: b49e4846-2a82-48ed-9ca8-953eb5c1baaa
 ms.openlocfilehash: 8dec01dcc0260b8e96d3a3c5553612da7eadc7fe
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33279819"
 ---
 # <a name="compiler-error-cs0100"></a>コンパイラ エラー CS0100
 パラメーター名 'parameter name' が重複しています  
