--- a/docs/csharp/misc/cs0102.md
+++ b/docs/csharp/misc/cs0102.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: c9419779-649f-4c24-b0f3-f0a1be46659e
 ms.openlocfilehash: ed844ae6feffdeb4b3deaace11bdcda59cbcbc68
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33273700"
 ---
 # <a name="compiler-error-cs0102"></a>コンパイラ エラー CS0102
 型 'type name' には既に 'identifier' の定義が含まれています  
