--- a/docs/csharp/misc/cs0213.md
+++ b/docs/csharp/misc/cs0213.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 3c1d55e3-2b84-4c28-8206-ef65869a898c
 ms.openlocfilehash: 3953d743494b47b891467ca4a8d31d2235df87e2
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33281461"
 ---
 # <a name="compiler-error-cs0213"></a>コンパイラ エラー CS0213
 既に fixed が使用されている式のアドレスを取得するために、fixed ステートメントを使用することはできません。  
