--- a/docs/csharp/misc/cs0023.md
+++ b/docs/csharp/misc/cs0023.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0023"
+title: コンパイラ エラー CS0023
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0023
 helpviewer_keywords:
 - CS0023
 ms.assetid: 7a30073c-99de-41fa-ac6d-4a0dfbb76de9
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 50eb6a0ae3c0c638d76a223736d9cbe8b5438921
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: c2e3e92ac82444a8bc71359e76be25222749ae89
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33267840"
 ---
-# <a name="compiler-error-cs0023"></a><span data-ttu-id="a6ce4-102">コンパイラ エラー CS0023</span><span class="sxs-lookup"><span data-stu-id="a6ce4-102">Compiler Error CS0023</span></span>
-<span data-ttu-id="a6ce4-103">演算子 'operator' を 'type' 型のオペランドに適用することはできません</span><span class="sxs-lookup"><span data-stu-id="a6ce4-103">Operator 'operator' cannot be applied to operand of type 'type'</span></span>  
+# <a name="compiler-error-cs0023"></a><span data-ttu-id="e868e-102">コンパイラ エラー CS0023</span><span class="sxs-lookup"><span data-stu-id="e868e-102">Compiler Error CS0023</span></span>
+<span data-ttu-id="e868e-103">演算子 'operator' を 'type' 型のオペランドに適用することはできません</span><span class="sxs-lookup"><span data-stu-id="e868e-103">Operator 'operator' cannot be applied to operand of type 'type'</span></span>  
   
- <span data-ttu-id="a6ce4-104">変数に演算子を適用しようとしましたが、変数の型は演算子に対して機能するように設計されていません。</span><span class="sxs-lookup"><span data-stu-id="a6ce4-104">An attempt was made to apply an operator to a variable whose type was not designed to work with the operator.</span></span> <span data-ttu-id="a6ce4-105">詳細については、次を参照してください。[型](../../csharp/programming-guide/types/index.md)と[c# 演算子](../../csharp/language-reference/operators/index.md)です。</span><span class="sxs-lookup"><span data-stu-id="a6ce4-105">For more information, see [Types](../../csharp/programming-guide/types/index.md) and [C# Operators](../../csharp/language-reference/operators/index.md).</span></span>  
+ <span data-ttu-id="e868e-104">変数に演算子を適用しようとしましたが、変数の型は演算子に対して機能するように設計されていません。</span><span class="sxs-lookup"><span data-stu-id="e868e-104">An attempt was made to apply an operator to a variable whose type was not designed to work with the operator.</span></span> <span data-ttu-id="e868e-105">詳細については、次を参照してください。[型](../../csharp/programming-guide/types/index.md)と[c# 演算子](../../csharp/language-reference/operators/index.md)です。</span><span class="sxs-lookup"><span data-stu-id="e868e-105">For more information, see [Types](../../csharp/programming-guide/types/index.md) and [C# Operators](../../csharp/language-reference/operators/index.md).</span></span>  
   
- <span data-ttu-id="a6ce4-106">次の例では CS0023 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="a6ce4-106">The following sample generates CS0023:</span></span>  
+ <span data-ttu-id="e868e-106">次の例では CS0023 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="e868e-106">The following sample generates CS0023:</span></span>  
   
 ```csharp  
 // CS0023.cs  
