--- a/docs/csharp/misc/cs0100.md
+++ b/docs/csharp/misc/cs0100.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0100"
+title: コンパイラ エラー CS0100
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0100
 helpviewer_keywords:
 - CS0100
 ms.assetid: b49e4846-2a82-48ed-9ca8-953eb5c1baaa
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 8da856612c2e52e02a558b7be08339b46156b195
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 8dec01dcc0260b8e96d3a3c5553612da7eadc7fe
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33279819"
 ---
-# <a name="compiler-error-cs0100"></a><span data-ttu-id="f7374-102">コンパイラ エラー CS0100</span><span class="sxs-lookup"><span data-stu-id="f7374-102">Compiler Error CS0100</span></span>
-<span data-ttu-id="f7374-103">パラメーター名 'parameter name' が重複しています</span><span class="sxs-lookup"><span data-stu-id="f7374-103">The parameter name 'parameter name' is a duplicate</span></span>  
+# <a name="compiler-error-cs0100"></a><span data-ttu-id="2a300-102">コンパイラ エラー CS0100</span><span class="sxs-lookup"><span data-stu-id="2a300-102">Compiler Error CS0100</span></span>
+<span data-ttu-id="2a300-103">パラメーター名 'parameter name' が重複しています</span><span class="sxs-lookup"><span data-stu-id="2a300-103">The parameter name 'parameter name' is a duplicate</span></span>  
   
- <span data-ttu-id="f7374-104">メソッドの宣言が、同じパラメーター名を複数回使用しました。</span><span class="sxs-lookup"><span data-stu-id="f7374-104">A method declaration used the same parameter name more than once.</span></span> <span data-ttu-id="f7374-105">パラメーター名は、メソッドの宣言で一意である必要があります。</span><span class="sxs-lookup"><span data-stu-id="f7374-105">Parameter names must be unique in a method declaration.</span></span> <span data-ttu-id="f7374-106">詳細については、「[メソッド](../../csharp/programming-guide/classes-and-structs/methods.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="f7374-106">For more information, see [Methods](../../csharp/programming-guide/classes-and-structs/methods.md).</span></span>  
+ <span data-ttu-id="2a300-104">メソッドの宣言が、同じパラメーター名を複数回使用しました。</span><span class="sxs-lookup"><span data-stu-id="2a300-104">A method declaration used the same parameter name more than once.</span></span> <span data-ttu-id="2a300-105">パラメーター名は、メソッドの宣言で一意である必要があります。</span><span class="sxs-lookup"><span data-stu-id="2a300-105">Parameter names must be unique in a method declaration.</span></span> <span data-ttu-id="2a300-106">詳細については、「[メソッド](../../csharp/programming-guide/classes-and-structs/methods.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="2a300-106">For more information, see [Methods](../../csharp/programming-guide/classes-and-structs/methods.md).</span></span>  
   
- <span data-ttu-id="f7374-107">次の例では CS0100 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="f7374-107">The following sample generates CS0100:</span></span>  
+ <span data-ttu-id="2a300-107">次の例では CS0100 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="2a300-107">The following sample generates CS0100:</span></span>  
   
 ```csharp  
 // CS0100.cs  
