--- a/docs/csharp/misc/cs0102.md
+++ b/docs/csharp/misc/cs0102.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS0102"
+title: コンパイラ エラー CS0102
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0102
 helpviewer_keywords:
 - CS0102
 ms.assetid: c9419779-649f-4c24-b0f3-f0a1be46659e
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 38581474c1160974cca81c6efcca977e6d036c86
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: ed844ae6feffdeb4b3deaace11bdcda59cbcbc68
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33273700"
 ---
-# <a name="compiler-error-cs0102"></a><span data-ttu-id="81097-102">コンパイラ エラー CS0102</span><span class="sxs-lookup"><span data-stu-id="81097-102">Compiler Error CS0102</span></span>
-<span data-ttu-id="81097-103">型 'type name' には既に 'identifier' の定義が含まれています</span><span class="sxs-lookup"><span data-stu-id="81097-103">The type 'type name' already contains a definition for 'identifier'</span></span>  
+# <a name="compiler-error-cs0102"></a><span data-ttu-id="c97a0-102">コンパイラ エラー CS0102</span><span class="sxs-lookup"><span data-stu-id="c97a0-102">Compiler Error CS0102</span></span>
+<span data-ttu-id="c97a0-103">型 'type name' には既に 'identifier' の定義が含まれています</span><span class="sxs-lookup"><span data-stu-id="c97a0-103">The type 'type name' already contains a definition for 'identifier'</span></span>  
   
- <span data-ttu-id="81097-104">クラス内で、同じ名前の識別子が同じスコープで複数宣言されています。</span><span class="sxs-lookup"><span data-stu-id="81097-104">A class contains multiple declarations for identifiers with the same name at the same scope.</span></span> <span data-ttu-id="81097-105">このエラーを解決するには、重複する識別子の名前を変更します。</span><span class="sxs-lookup"><span data-stu-id="81097-105">To fix the error, rename the duplicate identifiers.</span></span>  
+ <span data-ttu-id="c97a0-104">クラス内で、同じ名前の識別子が同じスコープで複数宣言されています。</span><span class="sxs-lookup"><span data-stu-id="c97a0-104">A class contains multiple declarations for identifiers with the same name at the same scope.</span></span> <span data-ttu-id="c97a0-105">このエラーを解決するには、重複する識別子の名前を変更します。</span><span class="sxs-lookup"><span data-stu-id="c97a0-105">To fix the error, rename the duplicate identifiers.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="81097-106">例</span><span class="sxs-lookup"><span data-stu-id="81097-106">Example</span></span>  
- <span data-ttu-id="81097-107">次の例では CS0102 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="81097-107">The following sample generates CS0102.</span></span>  
+## <a name="example"></a><span data-ttu-id="c97a0-106">例</span><span class="sxs-lookup"><span data-stu-id="c97a0-106">Example</span></span>  
+ <span data-ttu-id="c97a0-107">次の例では CS0102 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="c97a0-107">The following sample generates CS0102.</span></span>  
   
 ```csharp  
 // CS0102.cs  
