--- a/docs/csharp/misc/cs0191.md
+++ b/docs/csharp/misc/cs0191.md
@@ -1,33 +1,27 @@
 ---
-title: "コンパイラ エラー CS0191"
+title: コンパイラ エラー CS0191
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0191
 helpviewer_keywords:
 - CS0191
 ms.assetid: 512479e4-656e-4dcb-8d71-801541d72dcd
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 3ed240551c53adc2b835afc847db23829128f9ce
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: b2de7aa87d0d80b819af87b11aaeb8c17e58ad40
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33277502"
 ---
-# <a name="compiler-error-cs0191"></a><span data-ttu-id="30223-102">コンパイラ エラー CS0191</span><span class="sxs-lookup"><span data-stu-id="30223-102">Compiler Error CS0191</span></span>
-<span data-ttu-id="30223-103">プロパティまたはインデクサー 'name' は読み取り専用なので、割り当てることはできません</span><span class="sxs-lookup"><span data-stu-id="30223-103">Property or indexer 'name' cannot be assigned to -- it is read only</span></span>  
+# <a name="compiler-error-cs0191"></a><span data-ttu-id="0c784-102">コンパイラ エラー CS0191</span><span class="sxs-lookup"><span data-stu-id="0c784-102">Compiler Error CS0191</span></span>
+<span data-ttu-id="0c784-103">プロパティまたはインデクサー 'name' は読み取り専用なので、割り当てることはできません</span><span class="sxs-lookup"><span data-stu-id="0c784-103">Property or indexer 'name' cannot be assigned to -- it is read only</span></span>  
   
- <span data-ttu-id="30223-104">[readonly](../../csharp/language-reference/keywords/readonly.md) フィールドでは、コンストラクターまたは宣言時の割り当てだけを行うことができます。</span><span class="sxs-lookup"><span data-stu-id="30223-104">A [readonly](../../csharp/language-reference/keywords/readonly.md) field can only take an assignment in a constructor or at declaration.</span></span> <span data-ttu-id="30223-105">詳細については、「[コンストラクター](../../csharp/programming-guide/classes-and-structs/constructors.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="30223-105">For more information, see [Constructors](../../csharp/programming-guide/classes-and-structs/constructors.md).</span></span>  
+ <span data-ttu-id="0c784-104">[readonly](../../csharp/language-reference/keywords/readonly.md) フィールドでは、コンストラクターまたは宣言時の割り当てだけを行うことができます。</span><span class="sxs-lookup"><span data-stu-id="0c784-104">A [readonly](../../csharp/language-reference/keywords/readonly.md) field can only take an assignment in a constructor or at declaration.</span></span> <span data-ttu-id="0c784-105">詳細については、「[コンストラクター](../../csharp/programming-guide/classes-and-structs/constructors.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="0c784-105">For more information, see [Constructors](../../csharp/programming-guide/classes-and-structs/constructors.md).</span></span>  
   
- <span data-ttu-id="30223-106">`readonly` フィールドが [static](../../csharp/language-reference/keywords/static.md) であり、コンストラクターが `static`としてマークされていない場合にも、CS0191 が発生します。</span><span class="sxs-lookup"><span data-stu-id="30223-106">CS0191 also results if the `readonly` field is [static](../../csharp/language-reference/keywords/static.md) and the constructor is not marked `static`.</span></span>  
+ <span data-ttu-id="0c784-106">`readonly` フィールドが [static](../../csharp/language-reference/keywords/static.md) であり、コンストラクターが `static`としてマークされていない場合にも、CS0191 が発生します。</span><span class="sxs-lookup"><span data-stu-id="0c784-106">CS0191 also results if the `readonly` field is [static](../../csharp/language-reference/keywords/static.md) and the constructor is not marked `static`.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="30223-107">例</span><span class="sxs-lookup"><span data-stu-id="30223-107">Example</span></span>  
- <span data-ttu-id="30223-108">次の例では CS0191 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="30223-108">The following sample generates CS0191.</span></span>  
+## <a name="example"></a><span data-ttu-id="0c784-107">例</span><span class="sxs-lookup"><span data-stu-id="0c784-107">Example</span></span>  
+ <span data-ttu-id="0c784-108">次の例では CS0191 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="0c784-108">The following sample generates CS0191.</span></span>  
   
 ```csharp  
 // CS0191.cs  
