--- a/docs/csharp/misc/cs0213.md
+++ b/docs/csharp/misc/cs0213.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS0213"
+title: コンパイラ エラー CS0213
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0213
 helpviewer_keywords:
 - CS0213
 ms.assetid: 3c1d55e3-2b84-4c28-8206-ef65869a898c
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: c78f3494740370d021aca91e8e1d72678f61123b
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 3953d743494b47b891467ca4a8d31d2235df87e2
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33281461"
 ---
-# <a name="compiler-error-cs0213"></a><span data-ttu-id="559c9-102">コンパイラ エラー CS0213</span><span class="sxs-lookup"><span data-stu-id="559c9-102">Compiler Error CS0213</span></span>
-<span data-ttu-id="559c9-103">既に fixed が使用されている式のアドレスを取得するために、fixed ステートメントを使用することはできません。</span><span class="sxs-lookup"><span data-stu-id="559c9-103">You cannot use the fixed statement to take the address of an already fixed expression</span></span>  
+# <a name="compiler-error-cs0213"></a><span data-ttu-id="69ffe-102">コンパイラ エラー CS0213</span><span class="sxs-lookup"><span data-stu-id="69ffe-102">Compiler Error CS0213</span></span>
+<span data-ttu-id="69ffe-103">既に fixed が使用されている式のアドレスを取得するために、fixed ステートメントを使用することはできません。</span><span class="sxs-lookup"><span data-stu-id="69ffe-103">You cannot use the fixed statement to take the address of an already fixed expression</span></span>  
   
- <span data-ttu-id="559c9-104">[unsafe](../../csharp/language-reference/keywords/unsafe.md) メソッドまたはパラメーター内のローカル変数は既に (スタック上に) 固定されているため、 [fixed](../../csharp/language-reference/keywords/fixed-statement.md) 式ではこれらの 2 つの変数のアドレスを使用できません。</span><span class="sxs-lookup"><span data-stu-id="559c9-104">A local variable in an [unsafe](../../csharp/language-reference/keywords/unsafe.md) method or a parameter is already fixed (on the stack), so you cannot take the address of either of these two variables in a [fixed](../../csharp/language-reference/keywords/fixed-statement.md) expression.</span></span> <span data-ttu-id="559c9-105">詳細については、「[アンセーフ コードとポインター](../../csharp/programming-guide/unsafe-code-pointers/index.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="559c9-105">For more information, see [Unsafe Code and Pointers](../../csharp/programming-guide/unsafe-code-pointers/index.md).</span></span>  
+ <span data-ttu-id="69ffe-104">[unsafe](../../csharp/language-reference/keywords/unsafe.md) メソッドまたはパラメーター内のローカル変数は既に (スタック上に) 固定されているため、 [fixed](../../csharp/language-reference/keywords/fixed-statement.md) 式ではこれらの 2 つの変数のアドレスを使用できません。</span><span class="sxs-lookup"><span data-stu-id="69ffe-104">A local variable in an [unsafe](../../csharp/language-reference/keywords/unsafe.md) method or a parameter is already fixed (on the stack), so you cannot take the address of either of these two variables in a [fixed](../../csharp/language-reference/keywords/fixed-statement.md) expression.</span></span> <span data-ttu-id="69ffe-105">詳細については、「[アンセーフ コードとポインター](../../csharp/programming-guide/unsafe-code-pointers/index.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="69ffe-105">For more information, see [Unsafe Code and Pointers](../../csharp/programming-guide/unsafe-code-pointers/index.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="559c9-106">例</span><span class="sxs-lookup"><span data-stu-id="559c9-106">Example</span></span>  
- <span data-ttu-id="559c9-107">次の例では CS0213 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="559c9-107">The following sample generates CS0213.</span></span>  
+## <a name="example"></a><span data-ttu-id="69ffe-106">例</span><span class="sxs-lookup"><span data-stu-id="69ffe-106">Example</span></span>  
+ <span data-ttu-id="69ffe-107">次の例では CS0213 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="69ffe-107">The following sample generates CS0213.</span></span>  
   
 ```csharp  
 // CS0213.cs  
