--- a/docs/csharp/misc/cs0556.md
+++ b/docs/csharp/misc/cs0556.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS0556"
+title: コンパイラ エラー CS0556
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0556
 helpviewer_keywords:
 - CS0556
 ms.assetid: e2430c6e-784f-4ab2-88b9-f660d956e9e8
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 9682e83c914d74272429388681894a7ca3d5e8e0
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 222b660ca926efd8fd2c9c4325aa90d7e82d7d0a
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33275571"
 ---
-# <a name="compiler-error-cs0556"></a><span data-ttu-id="68918-102">コンパイラ エラー CS0556</span><span class="sxs-lookup"><span data-stu-id="68918-102">Compiler Error CS0556</span></span>
-<span data-ttu-id="68918-103">ユーザー定義の変換では、それを囲む型に/から変換しなければなりません</span><span class="sxs-lookup"><span data-stu-id="68918-103">User-defined conversion must convert to or from the enclosing type</span></span>  
+# <a name="compiler-error-cs0556"></a><span data-ttu-id="65a9d-102">コンパイラ エラー CS0556</span><span class="sxs-lookup"><span data-stu-id="65a9d-102">Compiler Error CS0556</span></span>
+<span data-ttu-id="65a9d-103">ユーザー定義の変換では、それを囲む型に/から変換しなければなりません</span><span class="sxs-lookup"><span data-stu-id="65a9d-103">User-defined conversion must convert to or from the enclosing type</span></span>  
   
- <span data-ttu-id="68918-104">ユーザー定義の変換ルーチンは、そのルーチンを含むクラスとの間で変換を実行する必要があります。</span><span class="sxs-lookup"><span data-stu-id="68918-104">A user-defined conversion routine must convert to or from the class that contains the routine.</span></span>  
+ <span data-ttu-id="65a9d-104">ユーザー定義の変換ルーチンは、そのルーチンを含むクラスとの間で変換を実行する必要があります。</span><span class="sxs-lookup"><span data-stu-id="65a9d-104">A user-defined conversion routine must convert to or from the class that contains the routine.</span></span>  
   
- <span data-ttu-id="68918-105">次の例では CS0556 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="68918-105">The following sample generates CS0556:</span></span>  
+ <span data-ttu-id="65a9d-105">次の例では CS0556 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="65a9d-105">The following sample generates CS0556:</span></span>  
   
 ```csharp  
 // CS0556.cs  
