--- a/docs/csharp/language-reference/compiler-messages/cs0071.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0071.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33211204"
 ---
 # <a name="compiler-error-cs0071"></a>コンパイラ エラー CS0071
 イベントのインターフェイスを明示的に実装するには、イベント アクセサーの構文を使用する必要があります  
