--- a/docs/visual-basic/misc/bc30026.md
+++ b/docs/visual-basic/misc/bc30026.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33603421"
 ---
 # <a name="39end-sub39-expected"></a>&#39;End Sub&#39;が必要です
 `End` ステートメントは、終了するブロックと一致する必要があります。 `Sub` プロシージャの定義が正しく終了していません。  
