--- a/docs/visual-basic/misc/bc30095.md
+++ b/docs/visual-basic/misc/bc30095.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33606163"
 ---
 # <a name="39select-case39-must-end-with-a-matching-39end-select39"></a>&#39;Select Case&#39; 、対応する終了する必要があります&#39;End Select&#39;
 `Select` ステートメントまたは `Select Case` ステートメントがありますが、対応する `End Select` ステートメントがありません。 `End Select` ステートメントを使用して、 `Select` ブロックを終了する必要があります。  
