--- a/docs/visual-basic/misc/bc30128.md
+++ b/docs/visual-basic/misc/bc30128.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33605668"
 ---
 # <a name="security-attribute-39ltattributenamegt39-is-not-valid-lterrorgt"></a>セキュリティ属性&#39; &lt;attributename&gt; &#39;が正しくありません:&lt;エラー&gt;
 共通言語ランタイムでは、セキュリティ コンテキストの属性は受け入れられません。
