--- a/docs/csharp/misc/cs0215.md
+++ b/docs/csharp/misc/cs0215.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 2060440d-be22-4c10-8b26-43b08b615447
 ms.openlocfilehash: 9ba7b5607d1d2c745e00136b3bc13af3f6f7e4c9
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33287040"
 ---
 # <a name="compiler-error-cs0215"></a>コンパイラ エラー CS0215
 演算子 true または false の戻り値の型はブール型でなければなりません  
