--- a/docs/csharp/misc/cs0277.md
+++ b/docs/csharp/misc/cs0277.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 8abec3eb-4d4c-4aab-87cc-d0444ab23535
 ms.openlocfilehash: 62d578914fae2a3afb963025afbbcec6a115fca0
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33287083"
 ---
 # <a name="compiler-error-cs0277"></a>コンパイラ エラー CS0277
 'class' はインターフェイス メンバー 'accessor' を実装しません。 'class accessor' は public ではありません  
