--- a/docs/csharp/misc/cs0453.md
+++ b/docs/csharp/misc/cs0453.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: a1bbd09e-6313-4bfd-84bf-bc15a8d214a6
 ms.openlocfilehash: 7ff9ea622aa373fea6b0daa6e0adb3a6baba0337
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33286749"
 ---
 # <a name="compiler-error-cs0453"></a>コンパイラ エラー CS0453
 型 'Type Name' は、ジェネリック型のパラメーター 'Parameter Name'、またはメソッド 'Generic Identifier' として使用するために、Null 非許容の値型である必要があります  
