--- a/docs/csharp/language-reference/compiler-messages/cs0731.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0731.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 89c93d05c2281b4c834f48f6c8df1047e1410980
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/15/2018
+ms.locfileid: "34171469"
 ---
 # <a name="compiler-error-cs0731"></a>コンパイラ エラー CS0731
 アセンブリ 'assembly' にある 'type' の型フォワーダーで循環が発生します  
