--- a/docs/visual-basic/misc/bc30060.md
+++ b/docs/visual-basic/misc/bc30060.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33604953"
 ---
 # <a name="conversion-from-39lttype1gt39-to-39lttype2gt39-cannot-occur-in-a-constant-expression"></a>変換&#39; &lt;type1&gt; &#39;に&#39; &lt;type2&gt; &#39;定数式で発生することはできません
 `Const` ステートメントの初期化式は、定数の宣言された型に変換できないデータ型と評価されます。  
