--- a/docs/visual-basic/misc/bc30361.md
+++ b/docs/visual-basic/misc/bc30361.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33608174"
 ---
 # <a name="39ltproperty1gt39-and-39ltproperty2gt39-cannot-overload-each-other-because-only-one-is-declared-39default39"></a>&#39;&lt;property1&gt; &#39;と&#39; &lt;property2&gt; &#39; 1 つのみが宣言されているために、お互いをオーバー ロードすることはできません&#39;既定&#39;
 プロパティで `Default`が指定されている場合、その名前でオーバーロードされたすべてのプロパティでも `Default`を指定する必要があります。  
