--- a/docs/visual-basic/misc/bc30376.md
+++ b/docs/visual-basic/misc/bc30376.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33610267"
 ---
 # <a name="39new39-cannot-be-used-on-class-39ltclassnamegt39-because-it-contains-a-39mustoverride39-member-that-has-not-been-overridden"></a>&#39;新しい&#39;クラスでは使用できません&#39; &lt;classname&gt; &#39;が含まれているため、 &#39;MustOverride&#39;オーバーライドされていないメンバー
 オーバーライドされていない `New` メンバーを含むクラスで `MustOverride` の使用を試みました。  
