--- a/docs/visual-basic/misc/bc30471.md
+++ b/docs/visual-basic/misc/bc30471.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33607222"
 ---
 # <a name="expression-is-not-an-array-or-a-method-and-cannot-have-an-argument-list"></a>式は、配列またはメソッドではありません。引数リストを指定することはできません。
 配列またはメソッドではない式の引数リストを指定しました。 引数リストを指定することができるのは、配列またはメソッドのみです。  
