--- a/docs/visual-basic/misc/bc30500.md
+++ b/docs/visual-basic/misc/bc30500.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33608785"
 ---
 # <a name="constant-39ltconstantnamegt39-cannot-depend-on-its-own-value"></a>定数&#39; &lt;constantname&gt; &#39;独自の値に依存することはできません
 定数がそれ自体の値に依存する循環依存をコードに作成しました。 たとえば、 `Const a = Const b; Const b = Const a`のようにします。  
