--- a/docs/visual-basic/misc/bc30615.md
+++ b/docs/visual-basic/misc/bc30615.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33608879"
 ---
 # <a name="39end39-statement-cannot-be-used-in-class-library-projects"></a>&#39;終了&#39;クラス ライブラリ プロジェクトでステートメントを使用することはできません
 DLL の作成に使用したクラス ライブラリ プロジェクトでは、 `End` キーワードを使用してプロシージャのコードの実行を終了できません。  
