--- a/docs/visual-basic/misc/bc30622.md
+++ b/docs/visual-basic/misc/bc30622.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33610484"
 ---
 # <a name="39end-module39-must-be-preceded-by-a-matching-39module39"></a>&#39;End Module&#39;前に、対応する必要がある&#39;モジュール&#39;
 モジュール ブロックは `Module` ステートメントで始まり、 `End Module` コンストラクトで終わります。  
