--- a/docs/csharp/language-reference/compiler-messages/cs0731.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0731.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 89c93d05c2281b4c834f48f6c8df1047e1410980
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/15/2018
+ms.locfileid: "34171469"
 ---
 # <a name="compiler-error-cs0731"></a><span data-ttu-id="6faaa-102">コンパイラ エラー CS0731</span><span class="sxs-lookup"><span data-stu-id="6faaa-102">Compiler Error CS0731</span></span>
 <span data-ttu-id="6faaa-103">アセンブリ 'assembly' にある 'type' の型フォワーダーで循環が発生します</span><span class="sxs-lookup"><span data-stu-id="6faaa-103">The type forwarder for type 'type' in assembly 'assembly' causes a cycle</span></span>  
